Logic for spawning items in loot chests and new drop mechanics